<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/select_instance"
     android:icon="@drawable/ic_menu_view"
     android:title="@string/menu_select_instance"
     android:showAsAction="ifRoom" />
    <item android:id="@+id/ticket_add"
     android:icon="@drawable/ic_menu_add"
     android:title="@string/menu_ticket_add"
     android:showAsAction="ifRoom" />
    <item android:id="@+id/filter"
     android:icon="@drawable/ic_menu_filter"
     android:title="@string/menu_filter"
     android:showAsAction="ifRoom" /> 
    <item android:id="@+id/refresh"
     android:icon="@drawable/ic_menu_refresh"
     android:title="@string/menu_refresh"
     android:showAsAction="ifRoom" /> 
    <item android:id="@+id/preferences"
     android:icon="@drawable/ic_menu_preferences"
     android:title="@string/menu_preferences"
     android:showAsAction="ifRoom" /> 
</menu>