<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:gravity="bottom" 
    android:orientation="vertical" 
    android:baselineAligned="false" 
    android:background="#FFFFFF"
    >
    <TextView xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RowTicket_seperator"
        android:textSize="12sp"
        android:paddingLeft="5dip"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:paddingRight="5dip"
        android:background="#666666"
        android:textColor="#FFFFFF"
        />
    <TextView xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RowTicket_id"
        android:textSize="12sp"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textColor="#666666"
        />
    <TextView xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:id="@+id/RowTicket_label" 
        android:singleLine="true" 
        android:textSize="18sp" 
        android:paddingLeft="5dip" 
        android:paddingRight="5dip" 
        android:textColor="#000000"
        />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        >
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RowTicket_topleft_label"
            android:textSize="12sp"
            android:text="@string/label_type"
            android:layout_weight="0.25"
            android:textColor="#000000"
        />
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RowTicket_topleft"
            android:textSize="12sp"
            android:layout_weight="0.25"
            android:textColor="#666666"
        />
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RowTicket_topright_label"
            android:textSize="12sp"
            android:text="@string/label_owner"
            android:layout_weight="0.25"
            android:textColor="#000000"
        />
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RowTicket_topright"
            android:textSize="12sp"
            android:layout_weight="0.25"
            android:textColor="#666666"
        />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        >
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RowTicket_bottomleft_label"
            android:textSize="12sp"
            android:text="@string/label_status"
            android:layout_weight="0.16"
            android:textColor="#000000"
        />
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RowTicket_bottomleft"
            android:textSize="12sp"
            android:layout_weight="0.16"
            android:textColor="#666666"
        />
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RowTicket_bottomright_label"
            android:textSize="12sp"
            android:text="@string/label_milestone"
            android:layout_weight="0.16"
            android:textColor="#000000"
        />
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RowTicket_bottomright"
            android:textSize="12sp"
            android:layout_weight="0.16"
            android:textColor="#666666"
        />
    </LinearLayout>
</LinearLayout>